# building-energy-Seattle

./: .gitignore  building-energy-Seattle.code-workspace  pyproject.toml
.venv-pycaret/: pyvenv.cfg
notebooks/: 01_Analyse_Exploratoire.ipynb  02A_Energy_dummy_model.py  02A_Energy_models_comparator.ipynb  02A_GHG_dummy_model.py  02B_Energy_models.py  02C_EnergyetGHG_LinearReg_model.py  03A_Energy_models_CatBoost.py  03A_GHG_models_CatBoost copy.py  03A_GHG_models_CatBoost.py  03B_GHG_models_CatBoost.py  03_GHG-Emissions_models_comparator.ipynb  04A_Energy_models_Keras.py  04A_Energy_models_XGBoost.py  04A_V2Energy_models_XGBoost.py  04B_GHG_models_XGBoost.py  05A_Energy_models_RF.py  05A_GHG_models_RF.py  06A_Energy_models_lgb.py  06A_GHG_models_lgb.py  260211_table.ipynb  260211bis_table.ipynb  260216_modelistation_supervisee_data_scientist.ipynb  260224_model-energy-Seattle.ipynb  260226_Analyse_Exploratoire.ipynb  7A_Energy_Optuna.py
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/old/: 02A_Energy_models_comparator.py  02B_Energy_models_comparator.ipynb  03_GHG-Emissions_models_comparator.ipynb  04A_Energy_models_XGBoost.py  (+1 more)
reports/: 260216_modelistation_supervisee_data_scientist.html  260224_model-energy-Seattle.html
src/: __init__.py  analyse_bivariee.py  fast_modeles_comparator.py  indicateurs_taille_deffet.py  modeles_comparator copy.py  modeles_comparator.py  outliers_treatment.py  safe_divide.py  super_modeles_comparator.py  tunning_parameter.py
(+8 files in other folders)
