[project]
name = "building-energy-seattle"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Maxime", email = "maximebarbier57@gmail.com" }]
dependencies = ["numpy (>=2.4.2,<3.0.0)", "pandas (>=3.0.0,<4.0.0)", "polars (>=1.38.1,<2.0.0)", "pyarrow (>=23.0.0,<24.0.0)", "scikit-learn (>=1.8.0,<2.0.0)", "scipy (>=1.17.0,<2.0.0)", "statsmodels (>=0.14.6,<0.15.0)", "xgboost (>=3.2.0,<4.0.0)", "lightgbm (>=4.6.0,<5.0.0)", "catboost (>=1.2.8,<2.0.0)", "matplotlib (>=3.10.8,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)", "plotly (>=6.5.2,<7.0.0)", "altair (>=6.0.0,<7.0.0)", "jupyterlab (>=4.5.4,<5.0.0)", "ipykernel (>=7.2.0,<8.0.0)", "ipywidgets (>=8.1.8,<9.0.0)", "missingno (>=0.5.2,<0.6.0)", "dython (>=0.7.12,<0.8.0)", "pingouin (>=0.5.5,<0.6.0)"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
ruff = "^0.6.0"
black = "^24.8.0"
jupyter = "^1.1.1"
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
